Fix text overlap in search result with long content

--- a/framework/core/less/forum/Post.less
+++ b/framework/core/less/forum/Post.less
@@ -262,6 +262,10 @@
   padding-left: 50px;
   line-height: 1.7em;
 
+  .PostPreview-excerpt {
+    word-wrap: break-word;
+  }
+
   .Avatar {
     float: left;
     margin-left: -50px;
